# cf-surge-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-cli.yml
docs/plan/: 2026-03-25-rust-cli-catch-up-to-f02598b.md  2026-03-25-rust-cli-catch-up-to-ff0f5ad.md  2026-03-26-rust-cli-catch-up-to-4dc2798.md  2026-03-26-rust-cli-catch-up-to-6d42db9f.md  2026-03-26-rust-cli-catch-up-to-b01041c.md  2026-03-27-rust-cli-catch-up-to-4125a17.md  2026-05-28-rust-cli-catch-up-to-efe14cd.md  rust-cli-port-v1.md
docs/plan_result/: 2026-05-28-actions-fix-windows-signal-hook-iteration-1.md
skills/cfsurge-cli-release/: SKILL.md
skills/cfsurge-cli-release/agents/: openai.yaml
skills/cfsurge-cli-release/references/: commands.md
src/: lib.rs  main.rs
tests/: cli.rs  login_and_cli_basics.rs
