[package]
name = "cfsurge"
version = "0.1.0"
edition = "2024"

[dependencies]
home = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tiny_http = "0.12"
